<resources>
    <string name="app_name">جیبونومی</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_wish_list">WishListActivity</string>


    <string name="rial">ریال</string>
    <string name="firstMonth">فروردین</string>
    <string name="wish_list">آرزوها</string>
    <string name="transaction_list">لیست تراکنش ها</string>
    <string name="add_transaction">تراکنش</string>
    <string name="dashboard">گزارشات</string>
    <string name="merchants">فروشگاه ها</string>
    <string name="category">طبقه بندی</string>
    <string name="category_management"> دسته بندی</string>
    <string name="report">گزارشات</string>
    <string name="home">خانه</string>
    <string name="setting">تنظیمات</string>
    <string-array name="months">
        <item>فروردین</item>
        <item>اردیبهشت</item>
        <item>خرداد</item>
    </string-array>
    <string name="appwidget_text">جیبونومی</string>
    <string name="add_widget">Add widget</string>
    <string name="full_name">نام کاربر</string>
    <string name="email">آدرس پست الکترونیکی</string>
    <string name="choosePic">انتخاب عکس</string>
    <string name="neededBudget">بودجه مورد نیاز</string>
    <string name="wishTitle">عنوان آرزو</string>
    <string name="save">ذخیره</string>
    <string name="wishDescription">توضیحات</string>
    <string name="ویرایش">edit</string>
    <string name="amount">مبلغ</string>
    <string name="country_prompt" />
    <string name="transactionDescription">توضیحات</string>
    <string name="radioExpense">هزینه</string>
    <string name="radioIncome">درآمد</string>
    <string name="selectCategory">انتخاب نوع تراکنش</string>
    <string name="pickDate">انتخاب تاریخ</string>
    <string name="pickTime">انتخاب ساعت</string>
    <string name="categoryName">نام طبقه بندی</string>
    <string name="monthlyBudget">بودجه به ازای هر ماه</string>
    <string name="addSubCategory">اضافه کردن زیر گروه</string>
    <string name="chooseIcon">انتخاب آیکون</string>
    <string name="subCategoryCaption">عنوان زیر گروه</string>
    <string name="approve">تایید</string>

    <string name="recommended_stores">فروشگاه های پیشنهادی</string>
    <string name="dialog_description">هزینه های</string>
    <string name="smart_saving">پس انداز هوشمند</string>
    <string name="accounts">حساب ها</string>
    <string name="title_activity_maps">Map</string>
    <string name="contact_info">اطلاعات تماس</string>

</resources>
