<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/main_nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/main_nav_wish_list"
            android:icon="@drawable/genie"
            android:title="@string/wish_list" />
        <item
            android:id="@+id/main_nav_transaction_list"
            android:icon="@drawable/coin"
            android:title="@string/transaction_list" />
        <item
            android:id="@+id/main_nav_category"
            android:icon="@drawable/category"
            android:title="@string/category_management" />
        <item
            android:id="@+id/main_nav_report"
            android:icon="@drawable/dashboard_fill"
            android:title="@string/report" />
        <item
            android:id="@+id/main_nav_smart_saving"
            android:icon="@drawable/brain"
            android:title="@string/smart_saving" />
        <item
            android:id="@+id/main_nav_setting"
            android:icon="@drawable/setting"
            android:title="@string/setting" />
    </group>



</menu>
